--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SimpleWeightControl</string>
+    <string name="add">Add</string>
+    <string name="typeWeightOffer">Please, type your current weight</string>
+    <string name="emptyWeightList">You have no added some\nweight statistic yet.</string>
 </resources>
