--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">SimpleWeightControl</string>
     <string name="add">Add</string>
-    <string name="typeWeightOffer">Please, type your current weight</string>
+    <string name="typeWeightOffer">Type your current weight</string>
     <string name="emptyWeightList">You have no added some\nweight statistic yet.</string>
+    <string name="typedWrongWeight">You have typed wrong weight</string>
+    <string name="typedWrongTime">You have typed wrong time</string>
+    <string name="editWeightRecord">Add/edit weight record</string>
 </resources>
