--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="typedWrongTime">You have typed wrong time</string>
     <string name="editWeightRecord">Add/edit weight record</string>
     <string name="delete">Delete</string>
+    <string name="averageWeightPreview">00</string>
+    <string name="date">Date</string>
 </resources>
