--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="delete">Delete</string>
     <string name="averageWeightPreview">00</string>
     <string name="date">Date</string>
+    <string name="average">Average</string>
 </resources>
