--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SimpleWeightControl</string>
     <string name="add">Add</string>
     <string name="typeWeightOffer">Type your current weight</string>
-    <string name="emptyWeightList">You have no added some\nweight statistic yet.</string>
+    <string name="emptyWeightList">You have no added some weight statistic yet.</string>
     <string name="typedWrongWeight">You have typed wrong weight</string>
     <string name="typedWrongTime">You have typed wrong time</string>
     <string name="editWeightRecord">Add/edit weight record</string>
@@ -10,4 +10,5 @@
     <string name="averageWeightPreview">00</string>
     <string name="date">Date</string>
     <string name="average">Average</string>
+    <string name="time">Time</string>
 </resources>
